# BookingAPI/internal/domain/domain.gen.go
@@ -1,0 +1,77 @@
+// Package domain provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+package domain
+
+import (
+	openapi_types "github.com/oapi-codegen/runtime/types"
+)
+
+// BookingRequest defines model for BookingRequest.
+type BookingRequest struct {
+	ContactDetails struct {
+		Email *string `json:"email,omitempty"`
+		Phone *string `json:"phone,omitempty"`
+	} `json:"contactDetails"`
+	CustomerName       string             `json:"customerName"`
+	EndDate            openapi_types.Date `json:"endDate"`
+	PaymentInformation struct {
+		CardNumber *string `json:"cardNumber,omitempty"`
+		Cvv        *string `json:"cvv,omitempty"`
+		ExpiryDate *string `json:"expiryDate,omitempty"`
+	} `json:"paymentInformation"`
+	PropertyId int                `json:"propertyId"`
+	StartDate  openapi_types.Date `json:"startDate"`
+}
+
+// BookingResponse defines model for BookingResponse.
+type BookingResponse struct {
+	BookingId           *int                `json:"bookingId,omitempty"`
+	CheckInInstructions *string             `json:"checkInInstructions,omitempty"`
+	CustomerName        *string             `json:"customerName,omitempty"`
+	EndDate             *openapi_types.Date `json:"endDate,omitempty"`
+	PropertyId          *int                `json:"propertyId,omitempty"`
+	StartDate           *openapi_types.Date `json:"startDate,omitempty"`
+	TotalAmount         *float32            `json:"totalAmount,omitempty"`
+}
+
+// Property defines model for Property.
+type Property struct {
+	AccessInstructions        *string `json:"AccessInstructions,omitempty"`
+	Address                   *string `json:"Address,omitempty"`
+	ArchitecturalStyle        *string `json:"ArchitecturalStyle,omitempty"`
+	Bedrooms                  *int    `json:"Bedrooms,omitempty"`
+	City                      *string `json:"City,omitempty"`
+	Country                   *string `json:"Country,omitempty"`
+	EmergencyInstructions     *string `json:"EmergencyInstructions,omitempty"`
+	FeatureDescription        *string `json:"FeatureDescription,omitempty"`
+	Guests                    *int    `json:"Guests,omitempty"`
+	Layout                    *string `json:"Layout,omitempty"`
+	Location                  *string `json:"Location,omitempty"`
+	PropertyID                *int    `json:"PropertyID,omitempty"`
+	RecommendationDescription *string `json:"RecommendationDescription,omitempty"`
+	RuleDescription           *string `json:"RuleDescription,omitempty"`
+	SecurityDescription       *string `json:"SecurityDescription,omitempty"`
+	Size                      *int    `json:"Size,omitempty"`
+	Utilities                 *string `json:"Utilities,omitempty"`
+}
+
+// SearchOptions defines model for SearchOptions.
+type SearchOptions struct {
+	Bedrooms *int    `json:"bedrooms,omitempty"`
+	City     *string `json:"city,omitempty"`
+	Country  *string `json:"country,omitempty"`
+	Guests   *int    `json:"guests,omitempty"`
+}
+
+// GetPropertiesPropertyIdAvailabilityParams defines parameters for GetPropertiesPropertyIdAvailability.
+type GetPropertiesPropertyIdAvailabilityParams struct {
+	StartDate openapi_types.Date `form:"startDate" json:"startDate"`
+	EndDate   openapi_types.Date `form:"endDate" json:"endDate"`
+}
+
+// PostBookingsJSONRequestBody defines body for PostBookings for application/json ContentType.
+type PostBookingsJSONRequestBody = BookingRequest
+
+// PostPropertiesSearchJSONRequestBody defines body for PostPropertiesSearch for application/json ContentType.
+type PostPropertiesSearchJSONRequestBody = SearchOptions
